--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ data/models
 3b.run_sam/masks/*.csv
 3b.run_sam/notebooks/videos
 3b.run_sam/sam2_processing_dir/*
+3b.run_sam/stardist_processing_dir/*
 
 
 # cytomining results
