--- a/environments/SAM2_install/sam2.yaml
+++ b/environments/SAM2_install/sam2.yaml
@@ -6,14 +6,14 @@ channels:
   - pytorch
   - nvidia
 dependencies:
-  - python>=3.10
+  - python=3.12
   - pyarrow
   - imageio
   - ipykernel
   - jupyter
   - matplotlib
   - numba
-  - numpy
+  - numpy<=2.0
   - opencv
   - pandas>=2.0.0
   - scikit-image
@@ -28,8 +28,5 @@ dependencies:
   - lancedb
   - pip
   - pip:
-    - torch==2.4
-    - stardist
+    - torch
     - csbdeep
-    - tensorflow
-
