--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,7 @@ data/models
 6.scDINO_analysis/2.scDINO_processing/notebooks/4.deploy_shiny_app.ipynb
 6.scDINO_analysis/2.scDINO_processing/scripts/4.deploy_shiny_app.r
 6.scDINO_analysis/2.scDINO_processing/temporal_shiny_app/rsconnect
-
+6.scDINO_analysis/0.pre-process_images/data/*
 # data harmonization
 7.data_harmonization/data/
 
