--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 repos:
   # Update the pre-commit hooks
 -   repo: https://gitlab.com/vojko.pribudic.foss/pre-commit-update
-    rev: v0.7.0       # Insert the latest tag here
+    rev: v0.8.0       # Insert the latest tag here
     hooks:
     -   id: pre-commit-update
         args: [--exclude, black, --keep, isort]
@@ -36,13 +36,18 @@ repos:
 
   # additional hooks found with in the pre-commit lib
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v6.0.0
     hooks:
     -   id: trailing-whitespace # removes trailing white spaces
     -   id: mixed-line-ending # removes mixed end of line
         args:
         -   --fix=lf
--   repo: https://github.com/koalaman/shellcheck-precommit
-    rev: v0.10.0
+-   repo: local
     hooks:
-      - id: shellcheck
+    -   id: shellcheck
+        name: shellcheck
+        description: Test shell scripts with shellcheck
+        entry: shellcheck
+        language: python
+        types: [shell]
+        require_serial: true # shellcheck can detect sourcing this way
