--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ data/processed_images/*
 
 # Cluster files
 *alpine_std_out_std_err-*
+# Cluster files
+*alpine_std_out_std_err-*
 
 # logs
 **.log
@@ -57,18 +59,6 @@ data/processed_images/*
 3c.segment_cells/tmp_output/*
 !3c.segment_cells/figures/C-02_F0001_tracks.gif
 
-# cellprofiler logs
-4.cellprofiler_analysis/scripts/logs
-4.cellprofiler_analysis/scripts/*.log
-4.cellprofiler_analysis/notebooks/logs
-4.cellprofiler_analysis/notebooks/*.logs
-4.cellprofiler_analysis/analysis_output
-4.cellprofiler_analysis/pipelines/generated_pipelines
-
-5.cell_tracking/figures/*
-5.cell_tracking/results/*
-# keep one example of the figures
-!5.cell_tracking/figures/C-02_F0003_tracks.gif
 
 # cytomining results
 6.process_CP_features/data/
@@ -95,4 +85,14 @@ data/processed_images/*
 # data (processed)
 data/models/dino_deitsmall16_pretrain_full_checkpoint.pth
 data/processed_images/**
+
+# Cluster files
+*alpine_std_out_std_err-*
+4.cellprofiler_analysis/analysis_output/*
+5.cell_tracking/figures/*
+5.cell_tracking/results/*
+6.scDINO_analysis/0.pre-process_images/data/*
 *Rplots.pdf
+5.cell_tracking/figures/*
+# keep one example of the figures
+!5.cell_tracking/figures/C-02_F0003_tracks.gif
